# AutoResearcher

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
agents/: critic.py  executor.py  graph.py  llm.py  planner.py  state.py  writer.py
tools/: rag_store.py  search_tools.py
